--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,7 +1,7 @@
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
-  max-width: 780px; }
+  max-width: 80%; }
 
 .container-narrow > hr {
   margin: 30px 0; }
