--- a/_includes/themes/dinky/default.html
+++ b/_includes/themes/dinky/default.html
@@ -6,6 +6,7 @@
     <meta name="author" content="{{ site.author.name }}" />
     <title>{{ page.title }}</title>
 
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/styles.css">
     <link rel="stylesheet" href="{{ ASSET_PATH }}/css/pygment_trac.css">
     <script src="{{ ASSET_PATH }}/js/scale.fix.js"></script>
@@ -19,7 +20,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
+        <h2 class="header"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h2>
         <p class="header">{{ site.tagline }}</p>
         <ul>
           {% assign pages_list = site.pages %}
@@ -43,7 +44,7 @@
           <h4>about</h4>
           <ul>
             {% if site.author.email %}
-            <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+            <li class="contact"><address><span class="fn email">{{ site.author.email }}</span></address></li>
             {% endif %}
             {% if site.author.github %}
             <li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
