--- a/assets/themes/dinky/css/styles.css
+++ b/assets/themes/dinky/css/styles.css
@@ -159,7 +159,7 @@ code, pre {
 
 pre {
 	padding: 4px 12px;
-  background: #FDFEFB;  
+  background: #FDFEFB;
   border-radius:4px;
   border:1px solid #D7D8C8;
   overflow: auto;
@@ -167,6 +167,7 @@ pre {
 	margin-bottom: 32px;
 }
 
+pre code{padding:0;color:inherit;white-space:pre;white-space:pre-wrap;background-color:transparent;border:0;}
 
 /* Tables */
 
@@ -206,9 +207,9 @@ td {
 header {
 	background-color: #171717;
 	color: #FDFDFB;
-  width:170px;
-  float:left;
-  position:fixed;
+    width:170px;
+    float:left;
+    position:fixed;
 	border: 1px solid #000;
 	-webkit-border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
@@ -216,8 +217,8 @@ header {
 	-moz-border-radius-bottomright: 4px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
+	padding: 14px 25px 12px 50px;
+	margin: 20px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -254,7 +255,7 @@ header ul {
 
 header li {
 	list-style-type: none;
-  width:132px;
+  width:142px;
   height:15px;
 	margin-bottom: 12px;
 	line-height: 1em;
