--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,4 +1,8 @@
 /* Custom container */
+body {
+  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+}
+
 .container-narrow {
   margin: 0 auto;
   max-width: 80%; }
